--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <div id="player"></div>
     <div id="platform"></div>
 </div>
+<canvas id="box">
+    <
+</canvas>
 <script type="module" src="controlls.js"></script>
 <script type="module" src="gravity.js"></script>
 <script type="module" src="platforms.js"></script>
