--- a/index.html
+++ b/index.html
@@ -9,20 +9,13 @@
         body{
             margin: 0;
         }
-        #box {
-            margin-top: 50vh;
-            margin: auto;
-            width: 100%;
-            height: 300px;
-            border: 4px solid black;
-            background: lightgreen;
-        }
 
         #player {
             width: 25px;
             height: 25px;
             border: 3px solid black;
             background: green;
+            position: absolute;
         }
 
         #platform {
@@ -36,17 +29,21 @@
             top: 0;
             z-index: 10;
         }
+
+        #gameCanvas {
+            border: 2px solid black;
+        }
     </style>
 </head>
 
 <body>
 <div id="box" id="game-box">
     <div id="player"></div>
-    <div id="platform"></div>
+    <div id="platform">
+        <h1>Win Platform🏆</h1>
+    </div>
 </div>
-<canvas id="box">
-    <
-</canvas>
+<canvas id="gameCanvas"></canvas>
 <script type="module" src="controlls.js"></script>
 <script type="module" src="gravity.js"></script>
 <script type="module" src="platforms.js"></script>
